# CTF-Challenges

./: README.md
CTF-2020/: README.md
CTF-2021/: README.md
CTF-2021/00-xss-bot/: README.md
CTF-2021/01-magical-random-potion/: README.md
CTF-2021/02-freedom/: README.md
CTF-2021/04-pyjail1/: README.md
CTF-2021/05-pyjail2/: README.md
CTF-2021/06-i-wanna-do-nothing-today/: README.md
CTF-2021/07-together-we-strive-for-a-better-world/: README.md
CTF-2021/10-return-of-tuning-keyboard/: README.md
CTF-2021/11-the-wave-of-us/: README.md
CTF-2021/12-babyurii/: README.md
CTF-2021/12b-return-of-babyURIi/: README.md
CTF-2021/15-help-you-2/: README.md
CTF-2021/17-the-hardest-path/: README.md
CTF-2021/20-seccomp2/: README.md
CTF-2021/22-the-little-comedian/: README.md
CTF-2021/23-jack-botnet-service-1/: README.md
CTF-2021/24-jack-botnet-service-2/: README.md
CTF-2021/28-warmup/: README.md
CTF-2022/: README.md
CTF-2022/46-chess/src/chess-client/: .editorconfig  .gitignore  Cargo.toml  LICENCE  README.md  docker-compose.yml
CTF-2022/46-chess/src/chess-client/src/: main.rs
CTF-2022/46-chess/src/chess-client/src/chess/: board.rs  button.rs  castle_rights.rs  chess.rs  chess_gui.rs  chess_move.rs  color.rs  config.rs  direction.rs  error.rs  file.rs  lib.rs  piece.rs  rank.rs  square.rs  theme.rs  traffic.rs
CTF-2022/46-chess/src/chess-server/: Cargo.toml  Config.toml
CTF-2022/46-chess/src/chess-server/src/: main.rs
CTF-2022/46-chess/src/chess-server/stockfish15/: info.txt
CTF-2023/: README.md
CTF-2024/: README.md
(+1493 files in other folders)
