[package]
name = "chess-client"
version = "0.2.2"
authors = ["Valentin Colin <valentin.colin78@gmail.com>", "Marc Partensky <marc.partensky@gmail.com>"]
edition = "2021"
description = "Chess Game with graphical interface."
homepage = "https://rust-games.github.io/rg-chess"
repository = "https://github.com/rust-games/rg-chess"
documentation = "https://docs.rs/rg-chess/latest/chess"
license = "MIT"
# licence-file = "LICENSE"
keywords = ["chess", "game", "gui"]

[dependencies]
ggez = "0.7.0"
mint = "0.5"
log = "0.4.17"
env_logger = "0.9.0"
thiserror = "1.0.32"
alsa = "=0.6.0"
anyhow = "1.0.66"
snow = "0.9.0"

[lib]
name = "chess"
path = "src/chess/lib.rs"

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
