[package]
name = "chess-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
config = "0.13.2"
log = { version = "0.4.17", features = ["std"] }
shakmaty = "0.22.0"
simple_logger = { version = "4.0.0", features = ["stderr"] }
snow = "0.9.0"
tokio = "1.21.2"
uciengine = "0.1.33"
